# mydoglog

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  next.config.ts  package.json  tsconfig.json  vitest.config.ts
scraper/: README.md  build.py  build_families.py  pyproject.toml  scrape.py  seed_db.py  seed_medications.py  validate.py
scraper/data/: ingredient_families.json  manual_products.json  medications.json
scraper/data/brands/: acana.json  authority.json  bluebuffalo.json  canadiannaturals.json  (+31 more)
scraper/scrapers/: __init__.py  acana.py  authority.py  bluebuffalo.py  canadiannaturals.py  canidae.py  common.py  eukanuba.py  farmina.py  firstmate.py  fromm.py  gosolutions.py  hills.py  hills_common.py  hills_retail.py  hills_vet.py  iams.py  instinct.py  kirkland.py  merrick.py  naturalbalance.py  nowfresh.py  nulo.py  nutrience.py  nutrish.py  nutro.py  openfarm.py  pedigree.py  performatrin.py  petsmart.py  purina.py  purina_retail.py  purina_vet.py  rayne.py  royalcanin.py  simplynourish.py  stellachewys.py  tasteofthewild.py  wellness.py
scraper/tests/: test_acana.py  test_bluebuffalo.py  test_brand_data_quality.py  test_build.py  test_canadiannaturals.py  test_common.py  test_firstmate.py  test_gosolutions.py  test_hills.py  test_hills_retail.py  test_hills_vet.py  test_iams.py  test_ingredient_families.py  test_nowfresh.py  test_nutrience.py  test_openfarm.py  test_performatrin.py  test_purina.py  test_rayne.py  test_royalcanin.py  test_tasteofthewild.py  test_validate.py
(+245 files in other folders)
